<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPS Playback</string>
    <string name="no_filemanager_installed">No compatible file manager found</string>
    <string name="file_name">File name</string>
    <string name="open_title">Select file to open</string>
    <string name="open_button">Open</string>
    <string name="save_title">Select file to save</string>
    <string name="save_button">Save</string>
    <string name="pick_directory_title">Select a folder</string>
    <string name="pick_directory_button">Use this folder</string>
    <string name="start_playback">Start playback</string>
    <string name="stop_playback">Stop playback</string>
    <string name="back_one">-1</string>
    <string name="back_ten">-10</string>
    <string name="forward_one">+1</string>
    <string name="forward_ten">+10</string>
    <string name="please_wait">Please Wait</string>
    <string name="loading_file">Loading a GPS Recording</string>

</resources>