<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/file_name"
	android:textAppearance="?android:attr/textAppearanceMedium"
    android:layout_marginTop="10dip"
    android:layout_marginLeft="10dip"
    />
    <LinearLayout android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >

	    <EditText
	        android:id="@+id/file_path"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/file_name"
	        android:inputType="textMultiLine"
	        android:onClick="onClickOpenFile" />

		<ImageButton
		    android:id="@+id/file_manager"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:contentDescription="@string/open_title"
		    android:onClick="onClickOpenFile"
		    android:src="@drawable/ic_launcher_folder_small" />

	</LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/back_ten"
			android:onClick="onBackTen"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_ten" />

        <Button
            android:id="@+id/back_one"
			android:onClick="onBackOne"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_one" />

        <Button
            android:id="@+id/forward_one"
			android:onClick="onForwardOne"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forward_one" />

        <Button
            android:id="@+id/forward_ten"
			android:onClick="onForwardTen"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forward_ten" />

    </LinearLayout>
	
	<Button android:id="@+id/start"
		android:onClick="onClickStart"
		android:text="@string/start_playback"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dip" />
		
	<Button android:id="@+id/stop"
		android:onClick="onClickStop"
		android:text="@string/stop_playback"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dip" />
		
</LinearLayout>
